[gd_scene load_steps=17 format=3 uid="uid://vxuo8wbcx51w"]

[ext_resource type="Texture2D" uid="uid://d1h1vnlersy78" path="res://Sprites/Tasks/Task 7/Level 1/base.jpg" id="1_78pkg"]
[ext_resource type="Script" path="res://Storyline/10_Task 7/scripts/lock_pick.gd" id="1_aea2y"]
[ext_resource type="PackedScene" uid="uid://bt6ict873sn2c" path="res://Storyline/10_Task 7/lock_pick_2.tscn" id="2_rklxe"]
[ext_resource type="Texture2D" uid="uid://npu868d1vca3" path="res://Sprites/Tasks/Task 7/Level 1/kotak opsi pilihan.png" id="2_s3pfb"]
[ext_resource type="Script" path="res://Storyline/10_Task 7/scripts/kunci.gd" id="3_r6de0"]
[ext_resource type="Texture2D" uid="uid://cap5nwqix4hxk" path="res://Sprites/Tasks/Task 7/Level 1/kotak jawaban salah.png" id="4_iwqyx"]
[ext_resource type="Texture2D" uid="uid://digkbq3maxo7f" path="res://Sprites/Tasks/Task 7/Level 1/kotak on.png" id="5_hpo36"]
[ext_resource type="Texture2D" uid="uid://tlhvd0dwg6rg" path="res://Sprites/Tasks/Task 7/Level 1/opsi 1.png" id="6_p1j8v"]
[ext_resource type="Texture2D" uid="uid://c4x3f7u2yn16o" path="res://Sprites/Tasks/Task 7/Level 1/correct answer.png" id="7_12514"]
[ext_resource type="Texture2D" uid="uid://bo321xj27hex6" path="res://Sprites/Tasks/Task 7/Level 1/opsi 2.png" id="7_r1kfp"]
[ext_resource type="Texture2D" uid="uid://mkshvy6qi51o" path="res://Sprites/Tasks/Task 7/Level 1/opsi 3.png" id="8_pgvlk"]
[ext_resource type="Texture2D" uid="uid://cg6xwk634j2j1" path="res://Sprites/Tasks/Task 7/Level 1/opsi 4.png" id="9_4fnnl"]
[ext_resource type="AudioStream" uid="uid://bbydlh8fksxrj" path="res://Sounds/Task/correct answer.mp3" id="13_ckwyx"]
[ext_resource type="AudioStream" uid="uid://dijynhoke17vf" path="res://Sounds/Task/wrong answer.mp3" id="14_k4q2w"]
[ext_resource type="AudioStream" uid="uid://jqnue8vkp620" path="res://Sounds/Task/backsound quest loop.mp3" id="15_kltgp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nw812"]
size = Vector2(524, 252)

[node name="LockPick1" type="Node2D" node_paths=PackedStringArray("correct_kunci")]
script = ExtResource("1_aea2y")
scene = ExtResource("2_rklxe")
correct_kunci = NodePath("Kunci1")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_78pkg")

[node name="Kunci1" type="Sprite2D" parent="." node_paths=PackedStringArray("hoveredSprite", "wrongSprite", "correctSprite") groups=["correct_key"]]
position = Vector2(425, 350)
texture = ExtResource("2_s3pfb")
script = ExtResource("3_r6de0")
hoveredSprite = NodePath("Hovered")
wrongSprite = NodePath("Wrong")
correctSprite = NodePath("Correct")

[node name="Hovered" type="Sprite2D" parent="Kunci1"]
visible = false
texture = ExtResource("5_hpo36")

[node name="Wrong" type="Sprite2D" parent="Kunci1"]
visible = false
texture = ExtResource("4_iwqyx")

[node name="Correct" type="Sprite2D" parent="Kunci1"]
visible = false
texture = ExtResource("7_12514")

[node name="Kunci" type="Sprite2D" parent="Kunci1"]
texture = ExtResource("6_p1j8v")

[node name="Area2D" type="Area2D" parent="Kunci1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kunci1/Area2D"]
shape = SubResource("RectangleShape2D_nw812")

[node name="Kunci2" type="Sprite2D" parent="." node_paths=PackedStringArray("hoveredSprite", "wrongSprite")]
position = Vector2(1025, 350)
texture = ExtResource("2_s3pfb")
script = ExtResource("3_r6de0")
hoveredSprite = NodePath("Hovered")
wrongSprite = NodePath("Wrong")

[node name="Hovered" type="Sprite2D" parent="Kunci2"]
visible = false
texture = ExtResource("5_hpo36")

[node name="Wrong" type="Sprite2D" parent="Kunci2"]
visible = false
texture = ExtResource("4_iwqyx")

[node name="Kunci" type="Sprite2D" parent="Kunci2"]
texture = ExtResource("7_r1kfp")

[node name="Area2D" type="Area2D" parent="Kunci2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kunci2/Area2D"]
shape = SubResource("RectangleShape2D_nw812")

[node name="Kunci3" type="Sprite2D" parent="." node_paths=PackedStringArray("hoveredSprite", "wrongSprite")]
position = Vector2(425, 750)
texture = ExtResource("2_s3pfb")
script = ExtResource("3_r6de0")
hoveredSprite = NodePath("Hovered")
wrongSprite = NodePath("Wrong")

[node name="Hovered" type="Sprite2D" parent="Kunci3"]
visible = false
texture = ExtResource("5_hpo36")

[node name="Wrong" type="Sprite2D" parent="Kunci3"]
visible = false
texture = ExtResource("4_iwqyx")

[node name="Kunci" type="Sprite2D" parent="Kunci3"]
texture = ExtResource("8_pgvlk")

[node name="Area2D" type="Area2D" parent="Kunci3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kunci3/Area2D"]
shape = SubResource("RectangleShape2D_nw812")

[node name="Kunci4" type="Sprite2D" parent="." node_paths=PackedStringArray("hoveredSprite", "wrongSprite")]
position = Vector2(1025, 750)
texture = ExtResource("2_s3pfb")
script = ExtResource("3_r6de0")
hoveredSprite = NodePath("Hovered")
wrongSprite = NodePath("Wrong")

[node name="Hovered" type="Sprite2D" parent="Kunci4"]
visible = false
texture = ExtResource("5_hpo36")

[node name="Wrong" type="Sprite2D" parent="Kunci4"]
visible = false
texture = ExtResource("4_iwqyx")

[node name="Kunci" type="Sprite2D" parent="Kunci4"]
texture = ExtResource("9_4fnnl")

[node name="Area2D" type="Area2D" parent="Kunci4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kunci4/Area2D"]
shape = SubResource("RectangleShape2D_nw812")

[node name="Correct" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("13_ckwyx")
bus = &"SFX"

[node name="Wrong" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("14_k4q2w")
bus = &"SFX"

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_kltgp")
autoplay = true
bus = &"Music"

[connection signal="input_event" from="Kunci1/Area2D" to="Kunci1" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Kunci1/Area2D" to="Kunci1" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Kunci1/Area2D" to="Kunci1" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="Kunci2/Area2D" to="Kunci2" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Kunci2/Area2D" to="Kunci2" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Kunci2/Area2D" to="Kunci2" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="Kunci3/Area2D" to="Kunci3" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Kunci3/Area2D" to="Kunci3" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Kunci3/Area2D" to="Kunci3" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="Kunci4/Area2D" to="Kunci4" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Kunci4/Area2D" to="Kunci4" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Kunci4/Area2D" to="Kunci4" method="_on_area_2d_mouse_exited"]
